plugins {
    id 'java'
}

apply plugin: 'application'
apply plugin: 'antlr'
mainClassName = "hu.mondokm.ltlverif.MainProgram"

group 'mondokm'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.17

repositories {
    mavenCentral()
    flatDir {
        dirs 'lib'
    }
}

sourceSets {
    main{
        java{
            srcDirs 'src/main/java'
            srcDirs 'src/main/gen'
        }
    }
}

dependencies {
    antlr "org.antlr:antlr4:4.7.2"
    implementation group: 'theta', name: 'theta-analysis'
    implementation group: 'theta', name: 'theta-cfa'
    implementation group: 'theta', name: 'theta-cfa-analysis'
    implementation group: 'theta', name: 'theta-common'
    implementation group: 'theta', name: 'theta-core'
    implementation group: 'theta', name: 'theta-solver'
    implementation group: 'theta', name: 'theta-solver-z3'
    implementation name: 'jhoafparser-1.1.1'
    implementation name: 'owl-21.0'
    implementation name: 'guava-31.1-jre'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'hu.mondokm.ltlverif.MainProgram'
        )
    }
}

run {
    String libPath = "lib"
    environment.put('PATH', libPath)
    environment.put('LD_LIBRARY_PATH', libPath)
}